From-api-gateway completed
